third_party/rust/pin-project/tests/ui/pin_project/overlapping_unpin_struct.stderr
error[E0277]: `std::marker::PhantomPinned` cannot be unpinned
  --> $DIR/overlapping_unpin_struct.rs:17:5
   |
14 | fn is_unpin<T: Unpin>() {}
   |                ----- required by this bound in `is_unpin`
...
17 |     is_unpin::<Foo<PhantomPinned>>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `__Foo<'_, std::marker::PhantomPinned>`, the trait `std::marker::Unpin` is not implemented for `std::marker::PhantomPinned`
   |
   = note: required because it appears within the type `__Foo<'_, std::marker::PhantomPinned>`
   = note: required because of the requirements on the impl of `std::marker::Unpin` for `Foo<std::marker::PhantomPinned>`
